--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/home-bg.jpg") repeat scroll center center / cover;
+  background: url("../images/me.jpg") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
